--- a/.github/workflows/revolutionary.yml
+++ b/.github/workflows/revolutionary.yml
@@ -1,8 +1,8 @@
 name: revolutionary
 
 on:
-  pull_request_target:
-    types: [ready_for_review, labeled]
+    pull_request:
+        types: [labeled]
 
 jobs:
   celebrate:
