--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-﻿[build-system]
+[build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
@@ -27,4 +27,5 @@ where = ["src"]
     "templates/formats/*.txt",
     "templates/styles/*.txt",
 ]
+
 
