--- a/.github/workflows/revolutionary.yml
+++ b/.github/workflows/revolutionary.yml
@@ -1,11 +1,11 @@
 ﻿name: Revolutionary Posters
 
 on:
-  pull_request_target:
+  pull_request:
     types:
       - opened
       - reopened
-      - synchronized
+      - synchronize
       - labeled
 
 permissions:
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Download diff
         env:
-          GH_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
         run: gh pr diff ${{ github.event.pull_request.number }} --repo ${{ github.repository }} > pr.diff
       - name: Prepare inputs
         id: poster-inputs
